--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,10 @@ variables:
 steps:
 - task: UseDotNet@2
   inputs:
-    packageType: 'sdk'
-    version: '3.1.x'  
+    packageType: 'runtime'
+    version: '3.1.x'
+    includePreviewVersions: true
+    performMultiLevelLookup: true
 
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
