--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,23 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
-
 pool:
   vmImage: 'ubuntu-latest'
-
 variables:
   buildConfiguration: 'Release'
-
 steps:
 - task: UseDotNet@2
   inputs:
-    packageType: 'runtime'
+    packageType: 'sdk'
     version: '3.1.x'
-    includePreviewVersions: true
-    performMultiLevelLookup: true
-
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
+  
 - task: DotNetCoreCLI@2
   inputs:
     command: 'publish'
     publishWebProjects: true
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
-
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Build.ArtifactStagingDirectory)'
+    publishLocation: 'pipeline'
